# effortless-performance-improvements-cpp

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  generate-perf-reports.sh  plot.sh  pretty-perf.sh  throughput.sh  wins.sh
app/src/: generator.cpp  service.cpp
lib/include/: replace.hpp  service.hpp  tokenize.hpp
lib/src/: replace_0.cpp  replace_1.cpp  service_0.cpp  service_1.cpp  service_10.cpp  service_11.cpp  service_12.cpp  service_2.cpp  service_3.cpp  service_4.cpp  service_5.cpp  service_6.cpp  service_7.cpp  service_8.cpp  service_9.cpp  tokenize_0.cpp  tokenize_1.cpp  tokenize_2.cpp  tokenize_3.cpp  tokenize_4.cpp
perf-report/: service_0.txt  service_1.txt  service_10.txt  service_11.txt  service_12.txt  service_2.txt  service_3.txt  service_4.txt  service_5.txt  service_6.txt  service_7.txt  service_8.txt  service_9.txt
tests/src/: service.cpp
